v0.1.0/_sources/changes.rst.txt
.. _changes:

Changelog
=========

Version 0.1.0
-------------

*Released on: 2020/01/10*

.. image:: https://zenodo.org/badge/DOI/10.5281/zenodo.3603997.svg
    :alt: Digital Object Identifier
    :target: https://doi.org/10.5281/zenodo.3603997

First release of *Boule* including basic functionality:

* Definition of the ``Ellipsoid`` class: based on the semi-major axis,
  flattening, geocentric gravitational constant, and angular velocity. Other
  quantities are derived from these 4.
* Computation of normal gravity and coordinate conversions between geodetic and
  geocentric.
* Ellipsoid realizations for the Earth (WGS84 and GRS80) and Mars.


Version 0.0.1
-------------

*Released on: 2019/11/06*

.. image:: https://zenodo.org/badge/DOI/10.5281/zenodo.3530750.svg
    :alt: Digital Object Identifier
    :target: https://doi.org/10.5281/zenodo.3530750

This release is a placeholder that serves as a marker for the start of this
project. It is used to register the project on PyPI and test the continuous
integration deployment process.
